refactor: fixing sonar issues

--- a/src/plugins/i18n/locales/en.json
+++ b/src/plugins/i18n/locales/en.json
@@ -271,7 +271,7 @@
     "select_endpoint": "Select Endpoint",
     "text_1": "Import global script",
     "text_2": "Connect Wallet",
-    "text_3": "Osmosis Convert"
+    "text_3": "Nibiru Convert"
   },
   "index": {
     "rank": "Rank",
