--- a/src/plugins/i18n/locales/id.json
+++ b/src/plugins/i18n/locales/id.json
@@ -261,7 +261,7 @@
     "select_endpoint": "Pilih Titik Akhir",
     "text_1": "Impor skrip global",
     "text_2": "Hubungkan Dompet",
-    "text_3": "Konversi Osmosis"
+    "text_3": "Konversi Nibiru"
   },
   "index": {
     "rank": "Peringkat",
